/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java Library project to get you started.
 * For more details take a look at the Java Libraries chapter in the Gradle
 * User Manual available at https://docs.gradle.org/6.0.1/userguide/java_library_plugin.html
 */

configure(subprojects.findAll {it.name != 'modules'}) {
    apply plugin: 'java'

    sourceCompatibility = 1.15
    targetCompatibility = 1.15

    project.ext.lwjglVersion = "3.2.3"
    project.ext.steamworks4jVersion = "1.8.0"
    project.ext.lwjglNatives = "natives-windows"

    java {
        modularity.inferModulePath = true
    }

    compileJava {
        options.compilerArgs << '--enable-preview'
        options.incremental = true
        options.fork = true 
    }

    repositories {
        jcenter()
        maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
    }
}

subprojects {
    version = '1.0'
}

